# WebDetect

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
src/authentication/: Cargo.toml  authentication.rs  mod.rs
src/crawler/: Cargo.toml  crawler.rs
src/database/: Cargo.toml  mod.rs  vulnerability_database.rs
src/reporting/: Cargo.toml  reporting.rs
src/scanner/: Cargo.toml  mod.rs  sql_injection.rs  xss.rs
tests/: integration_tests.rs  unit_tests.rs
